--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "This is the authentication Service",
   "main": "index.js",
   "scripts": {
-    "start" : "npx nodemon src/index.js"
+    "start": "npx nodemon --env-file=.env index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.7.1",
     "nodemon": "^3.0.3",
     "sequelize": "^6.35.2",
